// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
box       = ["Ln", 1.1]
eval-auto = ln(1.1)
eval-mach = ln(1.1)
N-auto    = 0.0953101798043248600439521232807650922206053653086441991852398081630010142358842328390575029130364930727479418458517498888460436935129806386890150217023263755687346983551204157456607731117050481406611584967219092627683199972666804124629171163211396201386277872575289851216418802049468841988934550053918
N-mach    = 0.09531017980432493
`;

exports[` 2`] = `
box       = ["Ln", 1]
canonical = 0
`;

exports[` 3`] = `
box       = ["Ln", 0]
simplify  = NaN
eval-auto = NaN
eval-mach = NaN
N-auto    = -oo
N-mach    = -oo
`;

exports[` 4`] = `
box       = ["Ln", -1]
simplify  = pi i
eval-auto = pi i
eval-mach = pi i
N-auto    = 3.141592653589793i
N-mach    = 3.141592653589793i
`;

exports[` 5`] = `
box       = ["Ln", "Pi"]
eval-auto = ln(pi)
eval-mach = ln(pi)
N-auto    = 1.14472988584940017414342735135305871164729481291531157151362307147213776988482607978362327027548970770200981222869798915904820552792345658727908107881028682527639391426634590290248477335886993778920311963082475679401191602821722737988812656317804982369731331069500360006440548726388022327009643350496
N-mach    = 1.1447298858494002
`;

exports[` 6`] = `
box       = ["Ln", ["Complex", 1.1, 1.1]]
eval-auto = ln(1.1+1.1i)
eval-mach = ln(1.1+1.1i)
N-auto    = 0.4418837700842976+0.7853981633974483i
N-mach    = 0.4418837700842976+0.7853981633974483i
`;

exports[` 7`] = `
box       = ["Lb", 1.1]
canonical = ["Log", 1.1, 2]
eval-auto = log(1.1, 2)
eval-mach = log(1.1, 2)
N-auto    = 0.137503523749934908329043617236402782838400132657187459258045249910395843111393136859351555927530333635610828553520753818869456378417655308935309031892834659841921625436312933415678431794802836685089721387325313979200448424315348300065432434493487848379513625188712257411821679189143003901294651692852
N-mach    = 0.13750352374993502
`;

exports[` 8`] = `
box       = ["Lb", 1]
canonical = 0
`;

exports[` 9`] = `
box       = ["Lb", 0]
canonical = NaN
`;

exports[` 10`] = `
box       = ["Lb", -1]
canonical = ["Multiply", ["Complex", 0, 1], "Pi"]
eval-auto = pi i
eval-mach = pi i
N-auto    = 3.141592653589793i
N-mach    = 3.141592653589793i
`;

exports[` 11`] = `
box       = ["Lb", "Pi"]
canonical = ["Log", "Pi", 2]
eval-auto = log(pi, 2)
eval-mach = log(pi, 2)
N-auto    = 1.65149612947231879804327929510800733501847692676304152940678851548810296358454143896026479280985410170726547507735953528040422795990669225377815610122995487647503838735543360601796864574339755333631694521835331590220749359890904944283537389048793120363544307499504941088274861709489904359168753952834
N-mach    = 1.651496129472319
`;

exports[` 12`] = `
box       = ["Lb", ["Complex", 1.1, 1.1]]
canonical = ["Log", ["Complex", 1.1, 1.1], 2]
eval-auto = log(1.1+1.1i, 2)
eval-mach = log(1.1+1.1i, 2)
N-auto    = 0.637503523749935+1.1330900354567985i
N-mach    = 0.637503523749935+1.1330900354567985i
`;

exports[` 13`] = `
box       = ["Lg", 1.1]
canonical = ["Log", 1.1]
eval-auto = log(1.1)
eval-mach = log(1.1)
N-auto    = 0.04139268515822504075
N-mach    = 0.04139268515822507
`;

exports[` 14`] = `
box       = ["Lg", 1]
canonical = ["Log", 1]
simplify  = 0
`;

exports[` 15`] = `
box       = ["Lg", 0]
canonical = ["Log", 0]
simplify  = NaN
eval-auto = NaN
eval-mach = NaN
N-auto    = -oo
N-mach    = -oo
`;

exports[` 16`] = `
box       = ["Lg", -1]
canonical = ["Log", -1]
simplify  = pi i
eval-auto = pi i
eval-mach = pi i
N-auto    = 1.3643763538418412i
N-mach    = 1.3643763538418412i
`;

exports[` 17`] = `
box       = ["Lg", "Pi"]
canonical = ["Log", "Pi"]
eval-auto = log(pi)
eval-mach = log(pi)
N-auto    = 0.49714987269413385435
N-mach    = 0.4971498726941338
`;

exports[` 18`] = `
box       = ["Lg", ["Complex", 1.1, 1.1]]
canonical = ["Log", ["Complex", 1.1, 1.1]]
eval-auto = log(1.1+1.1i)
eval-mach = log(1.1+1.1i)
N-auto    = 0.19190768299021566+0.3410940884604603i
N-mach    = 0.19190768299021566+0.3410940884604603i
`;

exports[` 19`] = `
box       = ["Log", 1.1]
eval-auto = log(1.1)
eval-mach = log(1.1)
N-auto    = 0.04139268515822504075
N-mach    = 0.04139268515822507
`;

exports[` 20`] = `
box       = ["Log", 1]
canonical = 0
`;

exports[` 21`] = `
box       = ["Log", 0]
simplify  = NaN
eval-auto = NaN
eval-mach = NaN
N-auto    = -oo
N-mach    = -oo
`;

exports[` 22`] = `
box       = ["Log", -1]
simplify  = pi i
eval-auto = pi i
eval-mach = pi i
N-auto    = 1.3643763538418412i
N-mach    = 1.3643763538418412i
`;

exports[` 23`] = `
box       = ["Log", "Pi"]
eval-auto = log(pi)
eval-mach = log(pi)
N-auto    = 0.49714987269413385435
N-mach    = 0.4971498726941338
`;

exports[` 24`] = `
box       = ["Log", ["Complex", 1.1, 1.1]]
eval-auto = log(1.1+1.1i)
eval-mach = log(1.1+1.1i)
N-auto    = 0.19190768299021566+0.3410940884604603i
N-mach    = 0.19190768299021566+0.3410940884604603i
`;

exports[` 25`] = `
box       = ["Log", 1.1, 5]
eval-auto = log(1.1, 5)
eval-mach = log(1.1, 5)
N-auto    = 0.0592195443315850221290952112200056755436885124798733012053765685506367399975214087509268239491525844970738458882116546676623998742409510689085671265449699451366214421463414581636703211313486802656891503024504396765289576691196454947798566524241179212680078688131521718282775022742439680820428890182349
N-mach    = 0.05921954433158507
`;

exports[` 26`] = `
box       = ["Log", 1, 5]
canonical = 0
`;

exports[` 27`] = `
box       = ["Log", 0, 5]
simplify  = NaN
eval-auto = NaN
eval-mach = NaN
N-auto    = -oo
N-mach    = -oo
`;

exports[` 28`] = `
box       = ["Log", -1, 5]
simplify  = pi i
eval-auto = pi i
eval-mach = pi i
N-auto    = NaN
N-mach    = NaN
`;

exports[` 29`] = `
box       = ["Log", "Pi", 5]
eval-auto = log(pi, 5)
eval-mach = log(pi, 5)
N-auto    = 0.711260668712668955331823433658178621926139213621122192909073569241694417135075148590426680783385079839629687934900544147663278637478781819215791838466874091888002281963701157234302229618790242425970088272672458010305518678889987901854066489812224089582933172795876267574845227962924771368405433196015
N-mach    = 0.711260668712669
`;

exports[` 30`] = `
box       = ["Log", ["Complex", 1.1, 1.1], 5]
eval-auto = log(1.1+1.1i, 5)
eval-mach = log(1.1+1.1i, 5)
N-auto    = 0.2745578233682816+0.48799531645779287i
N-mach    = 0.2745578233682816+0.48799531645779287i
`;

exports[` 31`] = `TypeError: Cannot read properties of undefined (reading 'isOne')`;

exports[` 32`] = `
box       = ["Ln", "'string'"]
canonical = [
  "Ln",
  [
    "Error",
    ["ErrorCode", "'incompatible-domain'", "Numbers", "Strings"],
    "'string'"
  ]
]
`;

exports[` 33`] = `
box       = ["Ln", 3, 4]
canonical = ["Log", 3, 4]
eval-auto = log(3, 4)
eval-mach = log(3, 4)
N-auto    = 0.792481250360578090726869471973908254379907203846240530227876327270549113897179281261140237459044121045490331237529583671858776220530462411071041975310849149746828796119292617220791268151373842653489025843799777236863341731230618212442502379090533848065820240356541161664063122262433531694900741861712
N-mach    = 0.792481250360578
`;

exports[` 34`] = `
box       = ["Exp", 1.1]
eval-auto = e^(1.1)
eval-mach = e^(1.1)
N-auto    = 3.00416602394643311205840795358867239328268102601627276212975286052863219354994639393702584656011004248292917244402984646570474962851330870588319404414872885191810117665256977651600280320240531770696178627527767277756811819265380517158589120868877313696763726370244048310519667179451053181031722432356
N-mach    = 3.004166023946433
`;

exports[` 35`] = `
box       = ["Exp", 1]
canonical = ExponentialE
eval-auto = e
eval-mach = e
N-auto    = 2.71828182845904523536028747135266249775724709369995957496696762772407663035354759457138217852516642742746639193200305992181741359662904357290033429526059563073813232862794349076323382988075319525101901157383418793070215408914993488416750924476146066808226480016847741185374234544243710753907774499207
N-mach    = 2.718281828459045
`;

exports[` 36`] = `
box       = ["Exp", 0]
canonical = 1
`;

exports[` 37`] = `
box       = ["Exp", -1]
canonical = ["Divide", 1, "ExponentialE"]
eval-auto = 1 / e
eval-mach = 1 / e
N-auto    = 0.367879441171442321595523770161460867445811131031767834507836801697461495744899803357147274345919643746627325276843995208246975792790129008626653589494098783092194367377338115048638991125145616344987719978684475957939747302549892495453239366207964810514647520612294223089164926566600365074577283705533
N-mach    = 0.36787944117144233
`;

exports[` 38`] = `
box       = ["Exp", "Pi"]
eval-auto = e^(pi)
eval-mach = e^(pi)
N-auto    = 23.1406926327792634875383514354231139196586772479846854144921976927697456597936033869631458986524643117798961470673673267652323584350359720516867579043733631497763793488029138849154086414097914996305046774310917720372501807374843239434368575114297261117479683120206062564372808518954590707924259118776
N-mach    = 23.140692632779263
`;

exports[` 39`] = `
box       = ["Exp", ["Complex", 1.1, 1.1]]
eval-auto = e^(1.1+1.1i)
eval-mach = e^(1.1+1.1i)
N-auto    = 0.453596121425577387771370051784716122121467295662595047455938055418809218479857797339817217581568173108742101788550076665358257015264536503071640260771490634073380509305415506960098225572068508076609755329835358766886455328122481365854750820282133545359421775230235871921962472918559760436488165569111 * 0.8912073600614353i
N-mach    = 0.4535961214255773+0.8912073600614354i
`;

exports[` 40`] = `
box       = ["Exp", ["List", 1.1, 2, 4]]
eval-auto = [e^(1.1),e^2,e^4]
eval-mach = [e^(1.1),e^2,e^4]
N-auto    = [3.00416602394643311205840795358867239328268102601627276212975286052863219354994639393702584656011004248292917244402984646570474962851330870588319404414872885191810117665256977651600280320240531770696178627527767277756811819265380517158589120868877313696763726370244048310519667179451053181031722432356,7.38905609893065022723042746057500781318031557055184732408712782252257379607905776338431248507912179477375316126547886612388460369278127337447839221339807777490012289560741075370239133094755068208658182026964786820840422098225523487574246254141467992812933188807076330101933789974072998696009530330752,54.5981500331442390781102612028608784027907370386140687258265939585536620999358694816769805619447341427841154457710874278117571039412368358539061079798941503022051152831083338666205862984119625401267501884897553343082508404778745154568864279924187278514776565277859330070976060684093447477999293604281]
N-mach    = [3.004166023946433,7.3890560989306495,54.59815003314423]
`;

exports[`ADD Add  1`] = `
box       = [
  "Add",
  2,
  4,
  1.5,
  1.7,
  ["Divide", 5, 7],
  ["Divide", 3, 11],
  ["Sqrt", 5],
  "Pi",
  ["Sqrt", 5],
  ["Sqrt", 4]
]
canonical = [
  "Add",
  1.5,
  1.7,
  2,
  2,
  4,
  ["Rational", 3, 11],
  ["Rational", 5, 7],
  ["Sqrt", 5],
  ["Sqrt", 5],
  "Pi"
]
simplify  = 16.659148942012567 + pi
eval-auto = 16.659148942012567 + pi
eval-mach = 16.659148942012564 + pi
N-auto    = 19.8007415956023596442680037077550423680654191056111442825037520701418452705488317844698506550866946049341514518018428606685873930454577169718850926382083735481708534360986838657151259222812156810784664741426330562229532799262907901049726352564527200814130933325095081405048045631870441996172320049097
N-mach    = 19.800741595602357
`;

exports[`ADD Add '\\frac{2}{3}+\\frac{12345678912345678}{987654321987654321}+\\frac{987654321987654321}{12345678912345678}' 1`] = `
box       = [
  "Add",
  ["Divide", 2, 3],
  ["Divide", "12345678912345678", "987654321987654321"],
  ["Divide", "987654321987654321", "12345678912345678"]
]
canonical = [
  "Add",
  ["Rational", 1371742101371742, "109739369109739369"],
  ["Rational", 2, 3],
  ["Rational", "109739369109739369", 1371742101371742]
]
simplify  = 252817910027517540/3133620712618477
eval-auto = 252817910027517540/3133620712618477
eval-mach = 252817910027517540/3133620712618477
N-auto    = 80.679167395552772881657001247506613786223329805201856260862572743503746516991878014712794300690613875760692831300604832218978185474603641897234723495265654264647120605803410247316853063780516911671275059476309098116017572430604964568488625159709184874211287871391915977489963440065760911672846258714
N-mach    = 80.67916739555277
`;

exports[`ADD Add ['Add', 2.5, -1.1, 18.4] 1`] = `19.8`;

exports[`ADD Add ['Add', 2.5, -1.1] 1`] = `1.4`;

exports[`ADD Add ['Add', 2.5] 1`] = `2.5`;

exports[`ADD Add ['Add', 4, -1.1] 1`] = `2.9`;

exports[`ADD Add ['Add'] 1`] = `0`;

exports[`ADD Add \\frac{2}{-3222233}+\\frac{1}{3} 1`] = `
box       = ["Add", ["Divide", 2, -3222233], ["Divide", 1, 3]]
canonical = ["Subtract", ["Rational", 1, 3], ["Rational", 2, 3222233]]
simplify  = 3222227/9666699
eval-auto = 3222227/9666699
eval-mach = 3222227/9666699
N-auto    = 0.333332712645754253856461238733098030672104303651122270384130094461408180807119369290385476986508010645619564651800992251853502421043626164422829344329434484305345599361271101955279666823183384524541417913188359335487739920318197556373690750068870459295360287932830017775457785537751822002526405342713
N-mach    = 0.33333271264575426
`;

exports[`ADD Add \\sqrt{3}+2\\sqrt{3} 1`] = `["Multiply", 3, ["Sqrt", 3]]`;

exports[`ADD Add 8+\\sqrt{3} 1`] = `["Add", 8, ["Sqrt", 3]]`;

exports[`ADD Add 8.1+\\sqrt{3} 1`] = `9.8320508075688772`;

exports[`CONSTANTS CatalanConstant 1`] = `
box       = CatalanConstant
eval-auto = "CatalanConstant"
eval-mach = "CatalanConstant"
N-auto    = 0.9159655941772190150546035149323841107741493742816721342664981196217630197762547694793565129261151062485744226191961995790358988033258590594315947374811584069953320287733194605190387274781640878659090247064841521630002287276409423882599577415088163974702524820115607076448838078733704899008647751132259971343407485407553230768565335768095835260219382323950800720680355761048235733942319149829836189977069036404180862179411019175327431499782339761055122477953032487537187866582808236057022559419481809753509711315712615804242723636439850017382875977976530683700929808738874956108936597719409687268444416680462162433986483891628044828150627302274207388431172218272190472255870531908685735423498539498309919115967388464508615152499624237043745177737235177544070853846440132174839299994757244619975496197587064007474870701490937678873045869979860644874974643872062385137123927363049985035392239287879790633644032354784535851927777787270906083031994301332316712476158709792455479119092126201854803963934243
N-mach    = 0.915965594177219
`;

exports[`CONSTANTS EulerGamma 1`] = `
box       = EulerGamma
eval-auto = "EulerGamma"
eval-mach = "EulerGamma"
N-auto    = 0.57721566490153286060651209008240243104215933593992359880576723488486772677766467093694706329174674951463144724980708248096050401448654283622417399764492353625350033374293733773767394279259525824709491600873520394816567085323315177661152862119950150798479374508570574002992135478614669402960432542151905877553526733139925401296742051375413954911168510280798423487758720503843109399736137255306088933126760017247953783675927135157722610273492913940798430103417771778088154957066107501016191663340152278935867965497252036212879226555953669628176388792726801324310104765059637039473949576389065729679296010090151251959509222435014093498712282479497471956469763185066761290638110518241974448678363808617494551698927923018773910729457815543160050021828440960537724342032854783670151773943987003023703395183286900015581939880427074115422278197165230110735658339673
N-mach    = 0.5772156649015329
`;

exports[`CONSTANTS ExponentialE 1`] = `
box       = ExponentialE
eval-auto = e
eval-mach = e
N-auto    = 2.71828182845904523536028747135266249775724709369995957496696762772407663035354759457138217852516642742746639193200305992181741359662904357290033429526059563073813232862794349076323382988075319525101901157383418793070215408914993488416750924476146066808226480016847741185374234544243710753907774499207
N-mach    = 2.718281828459045
`;

exports[`CONSTANTS GoldenRatio 1`] = `
box       = GoldenRatio
simplify  = sqrt(5) / 2 + 1/2
eval-auto = (1 + sqrt(5)) / 2
eval-mach = (1 + sqrt(5)) / 2
N-auto    = 1.61803398874989484820458683436563811772030917980576286213544862270526046281890244970720720418939113748475408807538689175212663386222353693179318006076672635443338908659593958290563832266131992829026788067520876689250171169620703222104321626954862629631361443814975870122034080588795445474924618569537
N-mach    = 1.618033988749895
`;

exports[`CONSTANTS ImaginaryUnit 1`] = `ImaginaryUnit`;

exports[`CONSTANTS MachineEpsilon 1`] = `
box       = MachineEpsilon
eval-auto = "MachineEpsilon"
eval-mach = "MachineEpsilon"
N-auto    = 2.220446049250313e-16
N-mach    = 2.220446049250313e-16
`;

exports[`DIVIDE Divide (1/5)/7 1`] = `["Rational", 1, 35]`;

exports[`DIVIDE Divide 2.5/1.1 1`] = `2.(27)`;

exports[`DIVIDE Divide 6/3 1`] = `2`;

exports[`DIVIDE Divide with many arguments 1`] = `-0.123517786561264822134387351778656126482213438735177865612648221343873517786561264822134387351778656126482213438735177865612648221343873517786561264822134387351778656126482213438735177865612648221343873517786561264822134387351778656126482213438735177865612648221343873517786561264822134387351778656127`;

exports[`DIVIDE Divide with single argument 1`] = `2.5`;

exports[`EXACT EVALUATION Add: All exact 1`] = `
box       = ["Add", 6, ["Divide", 10, 14], ["Sqrt", ["Divide", 18, 9]]]
canonical = ["Add", 6, ["Rational", 5, 7], ["Sqrt", 2]]
simplify  = 47/7 + sqrt(2)
eval-auto = 47/7 + sqrt(2)
eval-mach = 47/7 + sqrt(2)
N-auto    = 8.12849927665880933451597443849541236428395758966266235889096545227644676417639275313610182004192728702072813194519801131063912177013645149835840721138565011712750838021321987847008566478686706777485718439527425732025598882031114772901423170435517491289526661494477002300003573655404831791370953712228
N-mach    = 8.12849927665881
`;

exports[`EXACT EVALUATION Add: All exact 2`] = `
box       = ["Add", 6, ["Sqrt", 2], ["Sqrt", 5]]
eval-auto = 6 + sqrt(2) + sqrt(5)
eval-mach = 6 + sqrt(2) + sqrt(5)
N-auto    = 9.65028153987288474521086239294097431401029023498847379744757698340125340409991193826480194270642384770452202238168608052917810378029781107623048161863338854028000083911938475856707659582379263864110723145997750539097369792701092645681494995773814179123678120553000171115500306261567151312648762279872
N-mach    = 9.650281539872886
`;

exports[`EXACT EVALUATION Add: All exact 3`] = `
box       = ["Add", 2, 5, ["Divide", 5, 7], ["Divide", 7, 9], ["Sqrt", 2], "Pi"]
canonical = [
  "Add",
  2,
  5,
  ["Rational", 5, 7],
  ["Rational", 7, 9],
  ["Sqrt", 2],
  "Pi"
]
simplify  = 535/63 + sqrt(2) + pi
eval-auto = 535/63 + sqrt(2) + pi
eval-mach = 535/63 + sqrt(2) + pi
N-auto    = 13.0478697080263803507563955995526930262589047668155459576436878223620409482403795295419144231618221327806539962362580957355107441574648115078615443972919090123555702606929361773534230871875938004830169266018630107639672127265645737405787926474041545998186929596460081493882678409800394892987475640413
N-mach    = 13.047869708026381
`;

exports[`EXACT EVALUATION Add: one inexact 1`] = `
box       = [
  "Add",
  1.1,
  2,
  5,
  ["Divide", 5, 7],
  ["Divide", 7, 9],
  ["Sqrt", 2],
  "Pi"
]
canonical = [
  "Add",
  1.1,
  2,
  5,
  ["Rational", 5, 7],
  ["Rational", 7, 9],
  ["Sqrt", 2],
  "Pi"
]
simplify  = 11.0062770544365872 + pi
eval-auto = 11.0062770544365872 + pi
eval-mach = 11.006277054436588 + pi
N-auto    = 14.1478697080263803507563955995526930262589047668155459576436878223620409482403795295419144231618221327806539962362580957355107441574648115078615443972919090123555702606929361773534230871875938004830169266018630107639672127265645737405787926474041545998186929596460081493882678409800394892987475640414
N-mach    = 14.14786970802638
`;

exports[`EXACT EVALUATION Canceled inexact values are ignored 1`] = `
box       = [
  "Add",
  2.12,
  -2.12,
  ["Divide", 1, 4],
  ["Divide", 1, 4],
  ["Sqrt", 5],
  ["Sqrt", 7]
]
canonical = [
  "Add",
  -2.12,
  2.12,
  ["Rational", 1, 4],
  ["Rational", 1, 4],
  ["Sqrt", 5],
  ["Sqrt", 7]
]
simplify  = 5.3818192885643807
eval-auto = 5.3818192885643807
eval-mach = 5.3818192885643805
N-auto    = 5.38181928856438028691078942237053666115087754269397590463923170461158974886808852717480729485332588558457275448927124659999679761307428864801375067741356043158392890292020305811096624018772711728151381555414136180871936449275600355808801106469355853836826402869632011884805541084995049101839677486505
`;

exports[`EXACT EVALUATION Cos: Exact integer 1`] = `
box       = ["Cos", 5]
eval-auto = cos(5)
eval-mach = cos(5)
N-auto    = 0.283662185463226264466639171513557308334422592252215944930359066586151456767382702286176981668344573238827368717546699736605498967134195925662330011169857957583560591062122401585694560677264692834622969349992413836584669775759014598539953353931061810137777676107069628717658164364389323503504767942392
N-mach    = 0.28366218546322625
`;

exports[`EXACT EVALUATION Cos: Exact rational 1`] = `
box       = ["Cos", ["Divide", 5, 7]]
canonical = ["Cos", ["Rational", 5, 7]]
eval-auto = cos(5/7)
eval-mach = cos(5/7)
N-auto    = 0.75556134670069659846839460896853410535735782980494793645305839593735324546165562946417814667629650474212420295625865731278367106808253400329652875676445847789410601802512294186499959811739922154366273047226133615492778347059325409955206612397502002549083333561616575655669591974717465530814517115356
N-mach    = 0.7555613467006966
`;

exports[`EXACT EVALUATION Cos: Inexact Fractional part 1`] = `
box       = ["Cos", 5.1]
eval-auto = cos(5.1)
eval-mach = cos(5.1)
N-auto    = 0.37797774271298056332057555292898167089864157613427757054176691301095089325160944062589768288139254367530404873151904980624223483933334430735763167923281364549573997115606722812153281677762174453464733830972368443331077476008404170273035854306379973956628001583307513233105253539488063491596440932623
N-mach    = 0.37797774271298024
`;

exports[`EXACT EVALUATION Cos: Pi (simplify constructible value) 1`] = `["Cos", "Pi"]`;

exports[`EXACT EVALUATION Exact values are grouped together 1`] = `
box       = [
  "Add",
  2,
  ["Divide", 1, 4],
  ["Divide", 1, 4],
  ["Sqrt", 5],
  ["Sqrt", 7]
]
canonical = [
  "Add",
  2,
  ["Rational", 1, 4],
  ["Rational", 1, 4],
  ["Sqrt", 5],
  ["Sqrt", 7]
]
simplify  = 5/2 + sqrt(5) + sqrt(7)
eval-auto = 5/2 + sqrt(5) + sqrt(7)
eval-mach = 5/2 + sqrt(5) + sqrt(7)
N-auto    = 7.38181928856438028691078942237053666115087754269397590463923170461158974886808852717480729485332588558457275448927124659999679761307428864801375067741356043158392890292020305811096624018772711728151381555414136180871936449275600355808801106469355853836826402869632011884805541084995049101839677486505
N-mach    = 7.3818192885643805
`;

exports[`EXACT EVALUATION Inexact values propagate 1`] = `
box       = ["Add", 0.1, 2, ["Divide", 1, 4]]
canonical = ["Add", 0.1, 2, ["Rational", 1, 4]]
simplify  = 2.35
`;

exports[`EXACT EVALUATION Sqrt: Exact integer 1`] = `
box       = ["Sqrt", 5]
eval-auto = sqrt(5)
eval-mach = sqrt(5)
N-auto    = 2.23606797749978969640917366873127623544061835961152572427089724541052092563780489941441440837878227496950817615077378350425326772444707386358636012153345270886677817319187916581127664532263985658053576135041753378500342339241406444208643253909725259262722887629951740244068161177590890949849237139073
N-mach    = 2.23606797749979
`;

exports[`EXACT EVALUATION Sqrt: Exact rational 1`] = `
box       = ["Sqrt", ["Divide", 5, 7]]
canonical = ["Divide", ["Sqrt", 35], 7]
eval-auto = sqrt(35) / 7
eval-mach = sqrt(35) / 7
N-auto    = 0.84515425472851657750961832736594529263078589011347718898281709559183177987223614810939321816901559686980366215917922224306509912217626550134784999109627854834136862429944699115939988942254899688226081123340494206012743746868227391071334928965970095451866787820698806242092360350359773120690458683394
N-mach    = 0.8451542547285166
`;

exports[`EXACT EVALUATION Sqrt: Inexact Fractional part 1`] = `
box       = ["Sqrt", 5.1]
canonical = 2.25831795812724298497204998596911539535997040397390263906946027328814033106057631953496688229852028460351411348921666633255700426566368618055814504367202819722403605649522904260127890687768886308998819858249583722150634592700422162431518607073529969539889118668989323817960251813456230927110467797291
`;

exports[`EXACT EVALUATION Square rationals are grouped together 1`] = `
box       = ["Add", ["Sqrt", 5], ["Sqrt", 5]]
simplify  = 2sqrt(5)
eval-auto = 2sqrt(5)
eval-mach = 2sqrt(5)
N-auto    = 4.47213595499957939281834733746255247088123671922305144854179449082104185127560979882882881675756454993901635230154756700850653544889414772717272024306690541773355634638375833162255329064527971316107152270083506757000684678482812888417286507819450518525445775259903480488136322355181781899698474278146
N-mach    = 4.47213595499958
`;

exports[`INVALID NEGATE INVALID Negate 1`] = `["Negate", 2.5, ["Error", "'unexpected-argument'", 1.1]]`;

exports[`INVALID NEGATE INVALID Negate 2`] = `
[
  "Negate",
  2.5,
  ["Error", "'unexpected-argument'", -1.1],
  ["Error", "'unexpected-argument'", 18.4]
]
`;

exports[`INVALID ROOT Too few args 1`] = `["Root", 2.5, ["Error", "'missing'"]]`;

exports[`INVALID ROOT Too many args 1`] = `["Root", 2.5, -1.1, ["Error", "'unexpected-argument'", 18.4]]`;

exports[`MULTIPLY 2x(-2/3) 1`] = `
box       = ["Multiply", 2, ["Rational", -2, 3]]
canonical = ["Multiply", -2, ["Rational", 2, 3]]
simplify  = -4/3
eval-auto = -4/3
eval-mach = -4/3
N-auto    = -1.33333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333
N-mach    = -1.3333333333333333
`;

exports[`MULTIPLY 2x(1+1.1i) 1`] = `["Multiply", 2, ["Complex", 1, 1.1]]`;

exports[`MULTIPLY 2x(1+i) 1`] = `["Multiply", 2, ["Complex", 1, 1]]`;

exports[`MULTIPLY 2x(1.1+1.1i) 1`] = `["Multiply", 2, ["Complex", 1.1, 1.1]]`;

exports[`MULTIPLY 2x(1.1+i) 1`] = `["Multiply", 2, ["Complex", 1.1, 1]]`;

exports[`MULTIPLY 2x(1.1i) 1`] = `["Multiply", 2, ["Complex", 0, 1.1]]`;

exports[`MULTIPLY 2x(2/3) 1`] = `
box       = ["Multiply", 2, ["Rational", 2, 3]]
simplify  = 4/3
eval-auto = 4/3
eval-mach = 4/3
N-auto    = 1.33333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333
N-mach    = 1.3333333333333333
`;

exports[`MULTIPLY 2x(1234567890987654321/3) 1`] = `
box       = ["Multiply", 2, ["Rational", "1234567890987654321", 3]]
canonical = ["Multiply", 2, "411522630329218107"]
simplify  = 823045260658436214
eval-auto = 823045260658436214
eval-mach = 823045260658436200
`;

exports[`MULTIPLY 2x-1234567890987654321.123456789 1`] = `
box       = ["Multiply", 2, "1234567890987654321.123456789"]
simplify  = 2469135781975308642.246913578
eval-auto = 2469135781975308642.246913578
eval-mach = 2469135781975309000
`;

exports[`MULTIPLY 2x1234567890987654321 1`] = `
box       = ["Multiply", 2, "1234567890987654321"]
simplify  = 2469135781975308642
eval-auto = 2469135781975308642
eval-mach = 2469135781975309000
`;

exports[`MULTIPLY 5x(-2.1) 1`] = `
box       = ["Multiply", 5, -2.1]
canonical = ["Multiply", -5, 2.1]
simplify  = -10.5
`;

exports[`MULTIPLY 5x2 1`] = `
box       = ["Multiply", 5, 2]
canonical = ["Multiply", 2, 5]
simplify  = 10
`;

exports[`MULTIPLY Multiply 1`] = `
box       = ["Multiply", 2.5]
canonical = 2.5
`;

exports[`MULTIPLY Multiply 2`] = `
box       = ["Multiply", 2.5, 1.1]
canonical = ["Multiply", 1.1, 2.5]
simplify  = 2.75
`;

exports[`MULTIPLY Multiply 3`] = `
box       = ["Multiply", 2.5, -1.1, 18.4]
canonical = ["Multiply", -2.5, 1.1, 18.4]
simplify  = -50.6
eval-auto = -50.6
eval-mach = -50.599999999999994
`;

exports[`MULTIPLY Multiply: All exact 1`] = `
box       = [
  "InvisibleOperator",
  2,
  ["Multiply", ["Divide", 5, 7], ["Divide", 7, 9]]
]
canonical = ["Multiply", 2, ["Rational", 5, 7], ["Rational", 7, 9]]
simplify  = 10/9
eval-auto = 10/9
eval-mach = 10/9
N-auto    = 1.11111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111
N-mach    = 1.1111111111111112
`;

exports[`MULTIPLY Multiply: All exact with symbol 1`] = `
box       = [
  "Multiply",
  2,
  5,
  ["Divide", 5, 7],
  ["Divide", 7, 9],
  ["Sqrt", 2],
  "Pi"
]
canonical = [
  "Multiply",
  2,
  5,
  ["Rational", 5, 7],
  ["Rational", 7, 9],
  ["Sqrt", 2],
  "Pi"
]
simplify  = (50sqrt(2) * pi) / 9
eval-auto = pi * (50sqrt(2)) / 9
eval-mach = pi * (50sqrt(2)) / 9
N-auto    = 24.6826829897687013723104499447816316589701204965316123504744200386468599616637439476407051931375846520189456260290488409131088806574757082909741464426356390182182156653104307395191870061183695673758501082080141595615300573172691817193422380543551726358061214963052057649513902042571494251546994846324
N-mach    = 24.6826829897687
`;

exports[`MULTIPLY Multiply: One inexact 1`] = `
box       = [
  "Multiply",
  1.1,
  2,
  5,
  ["Divide", 5, 7],
  ["Divide", 7, 9],
  ["Sqrt", 2],
  "Pi"
]
canonical = [
  "Multiply",
  1.1,
  2,
  5,
  ["Rational", 5, 7],
  ["Rational", 7, 9],
  ["Sqrt", 2],
  "Pi"
]
simplify  = 8.6424162145022482 * pi
eval-auto = 8.6424162145022482 * pi
eval-mach = 8.642416214502248 * pi
N-auto    = 27.1509512887455715095414949392597948248671325461847735855218620425115459578301183424047757124513431172208401886319537250044197687232232791200715610868992029200400372318414738134711057067302065241134351190288155755176830630489960998912764618597906898993867336459357263414465292246828643676701694330956
N-mach    = 27.150951288745574
`;

exports[`MULTIPLY with +Infinity 1`] = `
box       = ["Multiply", "x", -2, 3.1, "PositiveInfinity"]
canonical = ["Multiply", -2, 3.1, "PositiveInfinity", "x"]
simplify  = oo
`;

exports[`MULTIPLY with <0 1`] = `
box       = ["Multiply", "x", -2, 3.1, -5.2]
canonical = ["Multiply", 2, 3.1, 5.2, "x"]
simplify  = 32.24 * x
`;

exports[`MULTIPLY with -Infinity 1`] = `
box       = ["Multiply", "x", -2, 3.1, "NegativeInfinity", "NegativeInfinity"]
canonical = ["Multiply", -2, 3.1, "PositiveInfinity", "PositiveInfinity", "x"]
simplify  = oo
`;

exports[`MULTIPLY with -Infinity and +Infinity 1`] = `
box       = [
  "Multiply",
  "x",
  -2,
  3.1,
  "PositiveInfinity",
  "NegativeInfinity",
  "PositiveInfinity"
]
canonical = [
  "Multiply",
  2,
  3.1,
  "PositiveInfinity",
  "PositiveInfinity",
  "PositiveInfinity",
  "x"
]
simplify  = oo
`;

exports[`MULTIPLY with NaN 1`] = `
box       = ["Multiply", "x", 2, 3.1, "NaN"]
canonical = ["Multiply", 3.1, "NaN", 2, "x"]
simplify  = NaN
`;

exports[`MULTIPLY with Nan, -Infinity and +Infinity 1`] = `
box       = [
  "Multiply",
  "x",
  -2,
  3.1,
  "NaN",
  "NegativeInfinity",
  "PositiveInfinity"
]
canonical = [
  "Multiply",
  3.1,
  "NaN",
  2,
  "PositiveInfinity",
  "PositiveInfinity",
  "x"
]
simplify  = NaN
`;

exports[`MULTIPLY with zero 1`] = `
box       = ["Multiply", "x", 2, 3.1, 0]
canonical = 0
`;

exports[`Max Max 1`] = `["Max", 2.5]`;

exports[`Max Max 2`] = `
box       = ["Max", 2.5, 1.1]
eval-auto = 2.5
`;

exports[`Max Max 3`] = `
box       = ["Max", 2.5, -1.1, 18.4]
eval-auto = 18.4
`;

exports[`Max Max 4`] = `
box       = ["Max", 2.5, -1.1, "NaN", 18.4]
eval-auto = 18.4
`;

exports[`Max Max 5`] = `
box       = ["Max", 2.5, -1.1, "foo", 18.4]
eval-auto = max(18.4, "foo")
`;

exports[`Max Max 6`] = `["Max", "foo", "bar"]`;

exports[`Min Min 1`] = `["Min", 2.5]`;

exports[`Min Min 2`] = `
box       = ["Min", 2.5, 1.1]
eval-auto = 1.1
`;

exports[`Min Min 3`] = `
box       = ["Min", 2.5, -1.1, 18.4]
eval-auto = -1.1
`;

exports[`Min Min 4`] = `
box       = ["Min", 2.5, -1.1, "NaN", 18.4]
eval-auto = -1.1
`;

exports[`Min Min 5`] = `
box       = ["Min", 2.5, -1.1, "foo", 18.4]
eval-auto = min(-1.1, "foo")
`;

exports[`Min Min 6`] = `["Min", "foo", "bar"]`;

exports[`NEGATE -(+Infinity) 1`] = `NegativeInfinity`;

exports[`NEGATE -(-2.1) 1`] = `2`;

exports[`NEGATE -(-2/3) 1`] = `
box       = ["Negate", ["Rational", -2, 3]]
canonical = ["Rational", 2, 3]
eval-auto = 2/3
eval-mach = 2/3
N-auto    = 0.666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666667
N-mach    = 0.6666666666666666
`;

exports[`NEGATE -(-Infinity) 1`] = `PositiveInfinity`;

exports[`NEGATE -(1+1.1i) 1`] = `
box       = ["Negate", ["Complex", 1, 1.1]]
canonical = ["Complex", -1, -1.1]
`;

exports[`NEGATE -(1+i) 1`] = `
box       = ["Negate", ["Complex", 1, 1]]
canonical = ["Complex", -1, -1]
`;

exports[`NEGATE -(1.1+1.1i) 1`] = `
box       = ["Negate", ["Complex", 1.1, 1.1]]
canonical = ["Complex", -1.1, -1.1]
`;

exports[`NEGATE -(1.1+i) 1`] = `
box       = ["Negate", ["Complex", 1.1, 1]]
canonical = ["Complex", -1.1, -1]
`;

exports[`NEGATE -(1.1i) 1`] = `
box       = ["Negate", ["Complex", 0, 1.1]]
canonical = ["Complex", 0, -1.1]
`;

exports[`NEGATE -(2/3) 1`] = `
box       = ["Negate", ["Rational", 2, 3]]
canonical = ["Rational", -2, 3]
eval-auto = -2/3
eval-mach = -2/3
N-auto    = -0.666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666667
N-mach    = -0.6666666666666666
`;

exports[`NEGATE -(1234567890987654321/3) 1`] = `
box       = ["Negate", ["Rational", "1234567890987654321", 3]]
canonical = -411522630329218107
`;

exports[`NEGATE -0 1`] = `0`;

exports[`NEGATE -2 1`] = `-2`;

exports[`NEGATE -2.5 1`] = `-2.5`;

exports[`NEGATE -1234567890987654321 1`] = `-1234567890987654321`;

exports[`NEGATE -1234567890987654321.123456789 1`] = `-1234567890987654321.123456789`;

exports[`NEGATE -NaN 1`] = `NaN`;

exports[`POWER INVALID Power 1`] = `["Power", 2.5, ["Error", "'missing'"]]`;

exports[`POWER INVALID Power 2`] = `["Power", 2.5, -1.1, ["Error", "'unexpected-argument'", 18.4]]`;

exports[`POWER Power 1`] = `2.73989556596304327238758678572184768670441573476212474477527303867440388246708603970392860348217419966174650734241830141801071086740739112488887686147509962107202631729222684451725795476022873715618841078997757321324699329293686479810304444654540706522195290828106146584733531336153245832163909140362`;

exports[`POWER Power 2`] = `0.064`;

exports[`POWER Power 3`] = `0.0532834052737198809866142219748893909365764667878227834329918846963663478428743725871540846739599224303708275356284163974252193378122286065646041897030905641820444533971108711354013338224389228452203930661920291931822531213783913336571407220044004959119506689838061666445301273018215795880422817498033`;

exports[`RATIONAL Bignum rational 1`] = `
box       = ["Rational", "12345678901234567890", "23456789012345678901"]
canonical = ["Rational", 137174210, 260630989]
eval-auto = 137174210/260630989
eval-mach = 137174210/260630989
N-auto    = 0.526315809667590986273700553697396283141142513947180701524330247620707912058761362410361724100275735054667655042355688563189237638967022451808292067678874517872469877325293808404341357888182667334313035200890865667551144503388275137151860326171727798646384294693368178102566306879186956544142953008554
N-mach    = 0.526315809667591
`;

exports[`RATIONAL INVALID Rational 1`] = `
box       = ["Rational", 2.5, -1.1, 18.4]
canonical = [
  "Rational",
  [
    "Error",
    [
      "ErrorCode",
      "'incompatible-domain'",
      "Integers",
      "PositiveNumbers"
    ],
    2.5
  ],
  [
    "Error",
    [
      "ErrorCode",
      "'incompatible-domain'",
      "Integers",
      "NegativeNumbers"
    ],
    -1.1
  ],
  ["Error", "'unexpected-argument'", 18.4]
]
`;

exports[`RATIONAL INVALID Rational 2`] = `
box       = ["Rational", 2, 3, 5]
canonical = ["Rational", 2, 3, ["Error", "'unexpected-argument'", 5]]
`;

exports[`RATIONAL Rational 1`] = `
box       = ["Rational", 3, 4]
eval-auto = 3/4
eval-mach = 3/4
N-auto    = 0.75
N-mach    = 0.75
`;

exports[`RATIONAL Rational approximation 1`] = `
box       = ["Rational", 2.5]
eval-auto = 5/2
eval-mach = 5/2
N-auto    = 2.5
N-mach    = 2.5
`;

exports[`RATIONAL Rational approximation 2`] = `
box       = ["Rational", "Pi"]
eval-auto = 80143857/25510582
eval-mach = 80143857/25510582
N-auto    = 3.14159265358979323846264338327950288419716939937510582097494459230781640628620899862803482534211706798214808651328230664709384460955058223172535940812848111745028410270193852110555964462294895493038196442881097566593344612847564823378678316527120190914564856692346034861045432664821339360726024914127
N-mach    = 3.141592653589793
`;

exports[`RATIONAL Rational as Divide 1`] = `
box       = ["Rational", 3.1, 2.8]
canonical = 1.10(714285)
`;

exports[`RELATIONAL OPERATOR Equal 1`] = `True`;

exports[`RELATIONAL OPERATOR Equal 2`] = `False`;

exports[`RELATIONAL OPERATOR Greater 1`] = `False`;

exports[`RELATIONAL OPERATOR Greater 2`] = `True`;

exports[`RELATIONAL OPERATOR GreaterEqual 1`] = `True`;

exports[`RELATIONAL OPERATOR GreaterEqual 2`] = `False`;

exports[`RELATIONAL OPERATOR GreaterEqual 3`] = `True`;

exports[`RELATIONAL OPERATOR Less 1`] = `True`;

exports[`RELATIONAL OPERATOR Less 2`] = `False`;

exports[`RELATIONAL OPERATOR LessEqual 1`] = `True`;

exports[`RELATIONAL OPERATOR LessEqual 2`] = `True`;

exports[`RELATIONAL OPERATOR LessEqual 3`] = `False`;

exports[`RELATIONAL OPERATOR NotEqual 1`] = `False`;

exports[`RELATIONAL OPERATOR NotEqual 2`] = `True`;

exports[`ROOT Root 2.5 1`] = `1.35720880829745324430578299280896887107572773204978819033782303997173971566526292527301846591958165425432724872299237731844740663359637503758884364386416744789233110683757499491901225536854817670679644434922548857036873008639571977414047484825973707863508804759122585882513696407731069735799933628994`;

exports[`ROOT Root 5/7 1`] = `0.893903535096567661313707151032092418714594001916664985457491987578678517290116587675685680078454443223684056765580544353372487508395484291904871369211882780248148857022863682689075291415967456160423155889658554477288456997757547907251468944216634164344309526227848492070941193682714959988654763200981`;

exports[`ROOT Root 1234567890987654321 1`] = `1072765.97992715679156605764582921096839229131543358516075719195344068347337087366590844659080172541862366137788295638657232986411872552730225411596703011433344360693881715697091046861269630354791260487863507086619579031930582900232368179867734051773747729650299211117243082615398644240533034761507471`;

exports[`ROOT Root 1234567890987654321.123456789 1`] = `1072765.97992715679160181651179817576483156070256769442102405774861761152931060924100596572297810106819164038751409411721402208534591196133420697078897812476787985877533707303090180940050363202333137953917545765580010834367269977143353955509154738997846586626868163192855689775790557638700005301935056`;

exports[`SQRT INVALID  Sqrt 1`] = `
box       = ["Sqrt", 2.5, -1.1, 18.4]
canonical = [
  "Sqrt",
  2.5,
  ["Error", "'unexpected-argument'", -1.1],
  ["Error", "'unexpected-argument'", 18.4]
]
`;

exports[`SQRT INVALID Sqrt 1`] = `
box       = ["Sqrt", 2.5, 1.1]
canonical = ["Sqrt", 2.5, ["Error", "'unexpected-argument'", 1.1]]
`;

exports[`SQRT √ of list 1`] = `[2,1,7.48331477354788277116749746463309860351203961555745389260749093464007031261387805595361979038875914300198217745550395509101313073632848518532008410510367023481480224894971726382220003046080525599812771004267806007546617794425698907962100033887551863405990894639012099985287698935743968700396957668625,4.24264068711928514640506617262909423570901562613084421953003921397219743538632111655116260298292471820504153869273689107477450816755221163793236449129980749423966799778251677826739985150345834618171441032867991481791082360379058604418555225592266759582865698769145292614296435251928781088398575422397]`;

exports[`SQRT √(3+4i) 1`] = `
box       = ["Sqrt", ["Complex", 3, 4]]
canonical = ["Complex", 2, 1]
`;

exports[`SQRT √(3^2) 1`] = `
box       = ["Sqrt", ["Square", 3]]
canonical = 3
`;

exports[`SQRT √(4x) 1`] = `["Sqrt", ["Multiply", 4, "x"]]`;

exports[`SQRT √(5/7) 1`] = `
box       = ["Sqrt", ["Rational", 5, 7]]
canonical = ["Divide", ["Sqrt", 35], 7]
eval-auto = sqrt(35) / 7
eval-mach = sqrt(35) / 7
N-auto    = 0.84515425472851657750961832736594529263078589011347718898281709559183177987223614810939321816901559686980366215917922224306509912217626550134784999109627854834136862429944699115939988942254899688226081123340494206012743746868227391071334928965970095451866787820698806242092360350359773120690458683394
N-mach    = 0.8451542547285166
`;

exports[`SQRT √(5x(3+2)) 1`] = `
box       = ["Sqrt", ["Multiply", 5, ["Add", 3, 2]]]
canonical = ["Sqrt", ["Multiply", 5, ["Add", 2, 3]]]
simplify  = 5
`;

exports[`SQRT √(175) 1`] = `
box       = ["Sqrt", 175]
canonical = ["Multiply", 5, ["Sqrt", 7]]
eval-auto = 5sqrt(7)
eval-mach = 5sqrt(7)
N-auto    = 13.2287565553229529525080787681963021285512959154122509018416722960053441161514181388019644323727180530753228916924873154787176494431360739221369527794005386135857536486416194614984479743254363035048902710186191401185797055017096955800078926279815297287051757619840135820368689953702079075995220173716
N-mach    = 13.228756555322953
`;

exports[`SQRT √(1000000/49) 1`] = `
box       = ["Sqrt", ["Rational", 1000000, 49]]
canonical = ["Rational", 1000, 7]
eval-auto = 1000/7
eval-mach = 1000/7
N-auto    = 142.857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857
N-mach    = 142.85714285714286
`;

exports[`SQRT √(1000001/7) 1`] = `
box       = ["Sqrt", ["Rational", 1000001, 7]]
canonical = ["Divide", ["Sqrt", 7000007], 7]
eval-auto = sqrt(7000007) / 7
eval-mach = sqrt(7000007) / 7
N-auto    = 377.964661991416486292626754887896173075028795287661989012783003679063937031165920403938261865030927742046458019715067585207900562437353570902267846920881153508625606369817807726138826259964956001235757252077045287379687098745190530329132051697042240644979037821994737523441027788848373936010707824331
N-mach    = 377.9646619914165
`;

exports[`SQRT √(12345678901234567890/23456789012345678901) 1`] = `TypeError: Cannot convert a BigInt value to a number`;

exports[`SQRT √(12345670000000000000000000) 1`] = `
box       = ["Sqrt", 1.234567e+25]
eval-auto = sqrt(1.234567e+25)
eval-mach = sqrt(1.234567e+25)
N-auto    = 3513640562152.02524804768125339566833405267249656346739662007266335973217146476808797961368265270083359885647104541694951643455939213671858990306006684697879108471164860248530343724788293231020804674134912935337237387415642732379684811184762025146123363517367837581696934294578689894549659481693241546
N-mach    = 3513640562152.0254
`;

exports[`SQRT √0 1`] = `
box       = ["Sqrt", 0]
canonical = 0
`;

exports[`SQRT √2.5 1`] = `
box       = ["Sqrt", 2.5]
canonical = 1.58113883008418966599944677221635926685977756966260841342875242639629721931961911067212405418965014759367364207642002757427442801522694000734525979835007695167246082858962997032957507673705666974206204265846478854523578823052218462893953101890430497091418585577420316427649955929841228210166348080235
`;

exports[`SQRT √123456789.01234567890 1`] = `
box       = ["Sqrt", "123456789.0123456789"]
canonical = 11111.1110611111109935555550265555525531866475591865363250978905852388354950126387972612728982098198183440073269118507420097892803394113256505339510058112149001013360175147566614546771590729835073040013231859780546892408780607396922850994619159293554125249397659548320963439382608594034542371909930096
`;

exports[`SQRT √12345678901234567890 1`] = `
box       = ["Sqrt", "12345678901234567890"]
canonical = 3513641828.8201442530936541725557822179092408448080406703175096925979820601667005731257165532581975842032454312234324972844603810770623349055168864415868884292822311462521283564817541295970810289505666889101774449957441627276130173427850248283406747583003353177185961277055239143136187227857569108406
`;

exports[`SUBTRACT Subtract 1`] = `2.5`;

exports[`SUBTRACT Subtract 2`] = `1.4`;

exports[`SUBTRACT Subtract with multiple arguments 1`] = `-14.8`;

exports[`SUBTRACT Subtract with single argument 1`] = `2.5`;

exports[`Square INVALID Square 1`] = `
box       = ["Square", 2.5, 1.1]
canonical = ["Square", 2.5, ["Error", "'unexpected-argument'", 1.1]]
`;

exports[`Square INVALID Square 2`] = `
box       = ["Square", 2.5, -1.1, 18.4]
canonical = [
  "Square",
  2.5,
  ["Error", "'unexpected-argument'", -1.1],
  ["Error", "'unexpected-argument'", 18.4]
]
`;

exports[`Square Square 1`] = `["Square", 2.5]`;
